# hg-git

./: .gitignore  .gitlab-ci.yml  .hgignore  .hgsigs  .hgtags  CONTRIBUTING  CONTRIBUTING.rst  MANIFEST.in  Makefile  NEWS.rst  README.md  README.rst  TODO.txt  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
contrib/: check-versions-consistency.py  ci.sh  hggitperf.py
contrib/docker/: Dockerfile.alpine  Dockerfile.ubuntu  installhg.sh
contrib/docker/git-server/: Dockerfile  htpasswd  nginx.conf  start.sh
contrib/docker/git-server/ssh/: id_ed25519  id_ed25519.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  sshd_config
doc/: conf.py  configuration.rst  index.rst
hggit/: __init__.py  _ssh.py  bundle.py  commands.py  compat.py  config.py  debugcommands.py  gc.py  git2hg.py  git_handler.py  gitdirstate.py  gitrepo.py  hg2git.py  hgrepo.py  overlay.py  pathoptions.py  revsets.py  schemes.py  templates.py  util.py  verify.py  worktree.py
hggit/help/: git.rst
hggit/helptext/: config.rst
tests/: commitextra.py  git-serve.py  heredoctest.py  hghave  hghave.py  killdaemons.py  run-tests.py  sitecustomize.py  test-addbranchrevs.t  test-ambiguousprefix.t  test-annotate.t  test-bookmark-workflow.t  test-branch-bookmark-suffix.t  test-bundle.t  test-check-black.t  test-check-commit.t  test-check-pyflakes.t  test-check-pylint.t  test-clone.t  test-conflict-1.t  test-conflict-2.t  test-convergedmerge.t  test-debug-ci-corruption.t  test-doctest.py  test-docutils.py  test-empty-working-tree.t  test-encoding.t  test-export-additional-refs.t  test-extra.t  test-file-removal.t  test-gc.t  test-git-clone.t  test-git-gpg.t  test-git-intree.t  test-git-protocol.t  test-git-submodules.t  test-git-tags.t  test-git-workflow.t  test-gitignore-permissions.t  test-gitignore-share.t  (+59 more)
tests/testlib/: daemonize.py  dulwich-serve.py  dumbhttp.py  ext-break-git-import.py  ext-commit-extra.py  ext-get-password-from-env.py  hooks.py
