[build-system]
requires = [
  "setuptools >= 42",
  "setuptools_scm[toml]>=6.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "hggit/__version__.py"
version_scheme = "release-branch-semver"

[tool.black]
line-length = 80
exclude = '''
build/
| wheelhouse/
| dist/
| packages/
| \.hg/
| \.mypy_cache/
| \.venv/
| tests/
'''
skip-string-normalization = true
